src/objects/Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>Physical_Street_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Street Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Zip_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <formula>IF (TEXT( Account_Name__r.Preferred_Language__c ) == &apos;&apos;, &apos;ENU&apos;, TEXT( Account_Name__r.Preferred_Language__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Language Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If an application found via existing exposure check has the fraud flag set to true</inlineHelpText>
        <label>Previous Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>TEXT( Opportunity__r.Affinity_Cobrand_Sub_Interest__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Opportunity__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recourse_Amount__c</fullName>
        <label>Recourse Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recourse_Code__c</fullName>
        <label>Recourse Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PG	PERSONAL GUARANTEE</fullName>
                </value>
                <value>
                    <fullName>CG	CROSS CORP GUARANTEE</fullName>
                </value>
                <value>
                    <fullName>W0	WEX DEPOSIT</fullName>
                </value>
                <value>
                    <fullName>V0	VALVOLINE REPURCHASE</fullName>
                </value>
                <value>
                    <fullName>LC	LETTER OF CREDIT</fullName>
                </value>
                <value>
                    <fullName>7E	7-ELEVEN UNIVERSAL</fullName>
                </value>
                <value>
                    <fullName>80	BANKRUPTCY (UNBLLD)</fullName>
                </value>
                <value>
                    <fullName>81	DO NOT SEND</fullName>
                </value>
                <value>
                    <fullName>82	FRAUD - DO NOT SEND</fullName>
                </value>
                <value>
                    <fullName>83	GGR EARLY PLACEMENT</fullName>
                </value>
                <value>
                    <fullName>84	RESOLVE PROGRAM</fullName>
                </value>
                <value>
                    <fullName>85	SETTLEMENT PROGRAM</fullName>
                </value>
                <value>
                    <fullName>86	CURE PROGRAM</fullName>
                </value>
                <value>
                    <fullName>87	RMC EARLY</fullName>
                </value>
                <value>
                    <fullName>88	RSLPO INTL LTR STAGE</fullName>
                </value>
                <value>
                    <fullName>89	PRO EARLY ESCALATED</fullName>
                </value>
                <value>
                    <fullName>8B	INTERNAL PRE CHG OFF</fullName>
                </value>
                <value>
                    <fullName>8E	EARLY 3RD PARTY PLMT</fullName>
                </value>
                <value>
                    <fullName>8S	&lt;120DAY SETTLEMENT</fullName>
                </value>
                <value>
                    <fullName>8W	INTERNAL WEEKLY&apos;S</fullName>
                </value>
                <value>
                    <fullName>90	BANKRUPTCY</fullName>
                </value>
                <value>
                    <fullName>91	PRE COLLECTION ACCT</fullName>
                </value>
                <value>
                    <fullName>92	FRAUD</fullName>
                </value>
                <value>
                    <fullName>93	COMMERCIAL RECOVERY</fullName>
                </value>
                <value>
                    <fullName>94	GGR 120 DAY PLACEMEN</fullName>
                </value>
                <value>
                    <fullName>95	AGENCY-PRO</fullName>
                </value>
                <value>
                    <fullName>96	INTERNAL RECOVERY</fullName>
                </value>
                <value>
                    <fullName>97	AGENCY-RMC</fullName>
                </value>
                <value>
                    <fullName>98	THIRD PARTY PLCMT</fullName>
                </value>
                <value>
                    <fullName>99	NO FURTHER COLLECTIO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recourse_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recourse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recourse_Expiration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recourse Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recourse_Follow_up_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recourse Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Approver__c</fullName>
        <description>CorporatePay</description>
        <label>Request Approver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edward Riddell</fullName>
                </value>
                <value>
                    <fullName>Howell Jones</fullName>
                </value>
                <value>
                    <fullName>Jon Reynolds</fullName>
                </value>
                <value>
                    <fullName>Martin Threakall</fullName>
                </value>
                <value>
                    <fullName>Myles Stephenson</fullName>
                </value>
                <value>
                    <fullName>Sarah Keane</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Notes__c</fullName>
        <description>CorporatePay Application Request Notes</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Notes for the application request</inlineHelpText>
        <label>Request Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Credit_Limit_Currency__c</fullName>
        <formula>VALUE(Requested_Credit_Limit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Credit Limit Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Credit_Limit__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Credit Limit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Greater_Than_DNB_High_Credit__c</fullName>
        <formula>IF( 
  OR( 
  Requested_Credit_Limit_Currency__c &lt; DNB_CSAD_High_Credit__c, 
  Requested_Credit_Limit_Currency__c &lt; DNB_SBFE_High_Credit__c 
  ), 
false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Greater Than DNB High Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Grade_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Grade Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>995</fullName>
                    <isActive>false</isActive>
                    <label>995</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_Credit_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Running Credit Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Opp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SF Opp #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Code__c</fullName>
        <formula>Opportunity__r.Sales_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_s_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep&apos;s First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_s_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep&apos;s Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Administrator__c</fullName>
        <description>CorporatePay Salesforce Administrator</description>
        <inlineHelpText>The Salesforce Admin responsible for the changes</inlineHelpText>
        <label>Salesforce Administrator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dare Akande</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Business_Check__c</fullName>
        <label>Sanctions Business Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Business_Result_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sanctions Business Result ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanctions_Check__c</fullName>
        <label>Sanctions Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Individual_Check__c</fullName>
        <label>Sanctions Individual Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sanctions_Individual_Result_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sanctions Individual Result ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Trades__c</fullName>
        <label>Satisfactory Trades</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Statement_on_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>Security Statement on Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_L1_Account_Number__c</fullName>
        <formula>Opportunity__r.Campaign_Program__r.Siebel_L1_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel L1 Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Login_Id__c</fullName>
        <formula>Sales_Person__r.Siebel_Login_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel_Login_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Oppty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Siebel Oppty #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sinclair_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinclair App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_DUNS_Number__c</fullName>
        <label>Site DUNS Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Security_Check__c</fullName>
        <label>Social Security Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicited_Activity_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicited Activity Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System_Text__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_old__c</fullName>
        <formula>Opportunity__r.SourceSystem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source System OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Project__c</fullName>
        <description>Start date of project</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date of Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Prospect</fullName>
                </value>
                <value>
                    <fullName>Application Incomplete</fullName>
                </value>
                <value>
                    <fullName>Application Complete</fullName>
                </value>
                <value>
                    <fullName>Pending BOCDD</fullName>
                </value>
                <value>
                    <fullName>Pending Decision</fullName>
                </value>
                <value>
                    <fullName>Decisioned</fullName>
                </value>
                <value>
                    <fullName>Implementation Complete</fullName>
                </value>
                <value>
                    <fullName>Pending Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CorporatePay Submit Request</description>
        <label>Submit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table_Max_Commercial__c</fullName>
        <label>Table Max - Commercial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Table_Max_Consumer__c</fullName>
        <label>Table Max - Consumer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_ID_number__c</fullName>
        <formula>Account_Name__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Payer ID number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Check__c</fullName>
        <label>ThreatMetrix Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Request_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Result</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThreatMetrix_Session_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ThreatMetrix Session ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Today_Hidden_for_Workflow__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today (Hidden for Workflow)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>View_Existing_Exposure__c</fullName>
        <formula>HYPERLINK(&apos;/apex/CreditExistingExposure?id=&apos; + Id, &apos;View Matches&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Existing Exposure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Account_Nbr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WEX Account Nbr</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Match_Score__c</fullName>
        <label>WEX Match Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WEX_Platform__c</fullName>
        <formula>TEXT(Opportunity__r.Campaign_Program__r.Program__r.WEX_Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WEX Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEX_Program_Account_Nbr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WEX Program Account Nbr</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Started__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_In_Business__c</fullName>
        <label>Years In Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application Request</label>
    <listViews>
        <fullName>App_Requests_Burke_Laura</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Credit_Decision_Comments__c</columns>
        <columns>Credit_Info_Status__c</columns>
        <columns>App_Submitted_Date__c</columns>
        <columns>App_Approved_Date__c</columns>
        <columns>App_Declined_Date__c</columns>
        <columns>Sales_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Person__c</field>
            <operation>equals</operation>
            <value>Burke Brimmer,Laura St. Pierre</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>notContain</operation>
            <value>Approved</value>
        </filters>
        <label>App Requests Burke &amp; Laura</label>
        <language>en_US</language>
        <sharedTo>
            <group>InsideSales</group>
            <group>InsideSalesManager</group>
            <role>ISSalesRep</role>
            <role>ISTeamLeader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Grasp_Pay_Applications</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>App_Approved_Date__c</columns>
        <columns>Approved_Credit_Limit__c</columns>
        <columns>Credit_Analyst__c</columns>
        <columns>Decision_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credit_Decision__c</field>
            <operation>equals</operation>
            <value>Approved,Approved - Rereview</value>
        </filters>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication,Implementation</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>MasterCard</value>
        </filters>
        <label>Approved Grasp Pay Applications</label>
        <language>en_US</language>
        <sharedTo>
            <role>Credit</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coupon_Code</fullName>
        <columns>Opportunity__c</columns>
        <columns>Campaign_Program__c</columns>
        <columns>Fleet_Size__c</columns>
        <columns>App_Submitted_Date__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>Requested_Credit_Limit__c</columns>
        <columns>Approved_Credit_Limit__c</columns>
        <columns>Sales_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Coupon_Code__c</field>
            <operation>equals</operation>
            <value>T2Y</value>
        </filters>
        <label>Coupon Code</label>
        <language>en_US</language>
        <sharedTo>
            <group>WEX_Salesforce_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FLT2_Adjudication_Default_Compliance_Review</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>Opportunity_Number__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>In_Progress__c</columns>
        <columns>In_Progress_User__c</columns>
        <columns>Sanctions_Check__c</columns>
        <columns>Sanctions_Business_Check__c</columns>
        <columns>Sanctions_Business_Result_ID__c</columns>
        <columns>Sanctions_Individual_Check__c</columns>
        <columns>Sanctions_Individual_Result_ID__c</columns>
        <columns>Credit_Decision_Recommendation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Decision</value>
        </filters>
        <filters>
            <field>Compliance_Decision__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Sanctions_Check__c</field>
            <operation>notEqual</operation>
            <value>Passed</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>notEqual</operation>
            <value>06 - Approved,07 - Declined,10 - Re-review Approved,11 - Re-review Declined</value>
        </filters>
        <label>2. Adjudication Default - Compliance</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FLT2_Adjudication_Default_Fraud_Review</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 and 7 and 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>In_Progress__c</columns>
        <columns>In_Progress_User__c</columns>
        <columns>Fraud_Recommendation__c</columns>
        <columns>Fraud_Decision_Comments__c</columns>
        <columns>ThreatMetrix_Check__c</columns>
        <columns>Social_Security_Check__c</columns>
        <columns>Phone_Number_Check__c</columns>
        <columns>Credit_Decision_Recommendation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Decision</value>
        </filters>
        <filters>
            <field>Fraud_Decision__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Fraud_Recommendation__c</field>
            <operation>equals</operation>
            <value>Recommend Review,Recommend Decline</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>notEqual</operation>
            <value>08 - Fraud</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/30/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Siebel_Oppty__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Credit_Decision__c</field>
            <operation>notEqual</operation>
            <value>Declined - Rereview</value>
        </filters>
        <label>2. Adjudication Default - Fraud Review</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FLT2_Adjudication_Default_No_Siebel_Oppty</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Program__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Log__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Adjudication</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Decision</value>
        </filters>
        <filters>
            <field>Siebel_Oppty__c</field>
            <operation>equals</operation>
        </filters>
        <label>2. Adjudication Default - No Siebel Oppt</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleet_Applications</fullName>
        <columns>Account_Name__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Campaign_Program__c</columns>
        <columns>Credit_Decision__c</columns>
        <columns>Approved_Credit_Limit__c</columns>
        <columns>Requested_Credit_Limit__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>App_Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Fleet Applications</label>
        <language>en_US</language>
        <sharedTo>
            <portalRoleAndSubordinates>MaverikPartnerManager</portalRoleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Incompleted_Applications_Recieved</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Sales_Stage__c</columns>
        <columns>App_Submitted_Date__c</columns>
        <columns>App_Approved_Date__c</columns>
        <columns>App_Declined_Date__c</columns>
        <columns>Fleet_Size__c</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application_Request__c.AU_Application</value>
        </filters>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Sales_Stage__c</field>
            <operation>contains</operation>
            <value>04</value>
        </filters>
        <label>My App Requests 04 App Recieved</label>
        <sharedTo>
            <group>InsideSales</group>
            <group>InsideSalesManager</group>
            <role>ISSalesRep</role>
            <role>ISTeamLeader</role>
        </sharedTo>
    </listViews>
</CustomObject>